[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/materials/fonts/terminal_theme.tres" type="Theme" id=1]
[ext_resource path="res://objects/interface/SettingsMenu-Pause.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/interface/RecordsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/scripts/interface/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/materials/fonts/terminal_big_text_theme.tres" type="Theme" id=5]
[ext_resource path="res://assets/audio/button_sound.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/textures/interface/icons/unicorn.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/interface/icons/earthpony.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/interface/icons/pegasus.png" type="Texture" id=9]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="page_label" type="Label" parent="."]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
margin_left = 40.0
margin_top = 20.0
margin_right = 215.0
margin_bottom = 42.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
visible = false
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -876.0
margin_top = 90.0
margin_right = 876.0
margin_bottom = 112.0
theme = ExtResource( 1 )
text = "==========================================================================================================================================================================================================================="
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -87.4312
margin_top = 103.925
margin_right = 89.5688
margin_bottom = 130.925
theme = ExtResource( 5 )
text = "Phoenix2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
visible = false
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -876.0
margin_top = 125.0
margin_right = 876.0
margin_bottom = 147.0
theme = ExtResource( 1 )
text = "==========================================================================================================================================================================================================================="
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 42.0
margin_top = -115.0
margin_right = -42.0
margin_bottom = -90.0
theme = ExtResource( 1 )
text = "               [Начать игру]"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load" type="Button" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 42.0
margin_top = -80.0
margin_right = -42.0
margin_bottom = -55.0
theme = ExtResource( 1 )
disabled = true
text = "               [Загрузить]"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="Button" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 42.0
margin_top = -45.0
margin_right = -42.0
margin_bottom = -20.0
theme = ExtResource( 1 )
text = "               [Настройки]"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="records" type="Button" parent="."]
visible = false
anchor_top = 0.504
anchor_right = 1.0
anchor_bottom = 0.504
margin_left = 42.0
margin_top = -12.4
margin_right = -42.0
margin_bottom = 12.6
theme = ExtResource( 1 )
text = "               [Рекорды]"
align = 0

[node name="about" type="Button" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 42.0
margin_top = 25.0
margin_right = -42.0
margin_bottom = 50.0
theme = ExtResource( 1 )
text = "               [Об игре]"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 42.0
margin_top = 60.0
margin_right = -42.0
margin_bottom = 85.0
theme = ExtResource( 1 )
text = "               [Выйти]"
align = 0

[node name="About" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background2" type="ColorRect" parent="About"]
anchor_right = 1.0
anchor_bottom = 0.747
margin_bottom = -0.200043
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="page_label" type="Label" parent="About"]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
margin_left = 40.0
margin_top = 20.0
margin_right = 215.0
margin_bottom = 42.0
theme = ExtResource( 1 )
text = "/Phoenix2/Главное_меню/Об_игре"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="about_label" type="Label" parent="About"]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -412.0
margin_top = -140.0
margin_right = 174.0
margin_bottom = 4.0
theme = ExtResource( 1 )
text = "Игра разработана в ходе участия в Шестом Общетабунском Конкурсе Игростроения.

Автор игры: VaJa72
Композитор треков и просто хороший человек: Phelanhik

Озвучено с использованием сервиса 15.ai

2020"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="About"]
margin_left = 42.0
margin_top = 100.0
margin_right = 982.0
margin_bottom = 125.0
theme = ExtResource( 1 )
text = "               [Назад]"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeRace" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="ChangeRace"]
anchor_right = 1.0
anchor_bottom = 0.853
margin_bottom = 0.199982
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="page_label" type="Label" parent="ChangeRace"]
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
margin_left = 40.0
margin_top = 20.0
margin_right = 322.0
margin_bottom = 42.0
theme = ExtResource( 1 )
text = "/Phoenix2/Главное_меню/Выбор_Расы"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="ChangeRace"]
margin_left = 42.0
margin_top = 100.0
margin_right = 982.0
margin_bottom = 125.0
theme = ExtResource( 1 )
text = "               [Назад]"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="earthpony" type="TextureRect" parent="ChangeRace"]
anchor_left = 0.5
anchor_top = 0.387
anchor_right = 0.5
anchor_bottom = 0.387
margin_left = -292.0
margin_top = -72.2
margin_right = -154.0
margin_bottom = 71.8
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choose" type="Button" parent="ChangeRace/earthpony"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = 88.0
margin_right = 69.0
margin_bottom = 113.0
theme = ExtResource( 1 )
text = "[Земной пони]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ChangeRace/earthpony"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -69.0
margin_top = 66.0
margin_right = 69.0
margin_bottom = 123.0
theme = ExtResource( 1 )
text = "> Здоровье: 150
> Возможность 
делать подкаты
> Возможность
бегать
> Сильные удары"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="unicorn" type="TextureRect" parent="ChangeRace"]
anchor_left = 0.5
anchor_top = 0.387
anchor_right = 0.5
anchor_bottom = 0.387
margin_left = -72.0
margin_top = -72.2
margin_right = 66.0
margin_bottom = 71.8
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choose" type="Button" parent="ChangeRace/unicorn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = 88.0
margin_right = 69.0
margin_bottom = 113.0
theme = ExtResource( 1 )
text = "[Единорог]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ChangeRace/unicorn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -69.0
margin_top = 66.0
margin_right = 69.0
margin_bottom = 183.0
theme = ExtResource( 1 )
text = "> Здоровье: 100
> Возможность 
телепортации
> Возможность
создавать 
магический щит"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pegasus" type="TextureRect" parent="ChangeRace"]
anchor_left = 0.5
anchor_top = 0.387
anchor_right = 0.5
anchor_bottom = 0.387
margin_left = 148.0
margin_top = -72.2
margin_right = 286.0
margin_bottom = 71.8
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choose" type="Button" parent="ChangeRace/pegasus"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = 88.0
margin_right = 69.0
margin_bottom = 113.0
theme = ExtResource( 1 )
text = "[Пегас]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ChangeRace/pegasus"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -69.0
margin_top = 66.0
margin_right = 69.0
margin_bottom = 83.0
theme = ExtResource( 1 )
text = "> Здоровье: 100
> Возможность 
летать"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
visible = false
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -50.0
margin_right = 39.0
margin_bottom = -28.0
theme = ExtResource( 1 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="down_label" type="Label" parent="."]
visible = false
modulate = Color( 0.223529, 0.752941, 0.145098, 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 45.0
margin_top = -50.0
margin_right = 220.0
margin_bottom = -28.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecordsMenu" parent="." instance=ExtResource( 3 )]
visible = false

[node name="SettingsMenu" parent="." instance=ExtResource( 2 )]
visible = false
header_text = "/Phoenix2/Главное_меню/Меню_Настроек"

[node name="audi" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="mouse_entered" from="start" to="." method="_on_mouse_entered" binds= [ "Начать игру" ]]
[connection signal="mouse_exited" from="start" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="load" to="." method="_on_mouse_entered" binds= [ "Загрузить уровень" ]]
[connection signal="mouse_exited" from="load" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="load" to="." method="_on_load_pressed"]
[connection signal="mouse_entered" from="settings" to="." method="_on_mouse_entered" binds= [ "Настройки" ]]
[connection signal="mouse_exited" from="settings" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="records" to="." method="_on_mouse_entered" binds= [ "Рекорды" ]]
[connection signal="mouse_exited" from="records" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="records" to="." method="_on_records_pressed"]
[connection signal="mouse_entered" from="about" to="." method="_on_mouse_entered" binds= [ "Об игре" ]]
[connection signal="mouse_exited" from="about" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="about" to="." method="_on_about_pressed"]
[connection signal="mouse_entered" from="exit" to="." method="_on_mouse_entered" binds= [ "Выйти" ]]
[connection signal="mouse_exited" from="exit" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="mouse_entered" from="About/back" to="." method="_on_mouse_entered" binds= [ "Назад" ]]
[connection signal="mouse_exited" from="About/back" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="About/back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="ChangeRace/back" to="." method="_on_mouse_entered" binds= [ "Назад" ]]
[connection signal="mouse_exited" from="ChangeRace/back" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="ChangeRace/back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="ChangeRace/earthpony/choose" to="." method="_on_mouse_entered" binds= [ "Выбрать расу: Земной пони" ]]
[connection signal="mouse_exited" from="ChangeRace/earthpony/choose" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="ChangeRace/earthpony/choose" to="." method="_on_choose_pressed" binds= [ "earthpony" ]]
[connection signal="mouse_entered" from="ChangeRace/unicorn/choose" to="." method="_on_mouse_entered" binds= [ "Выбрать расу: Единорог" ]]
[connection signal="mouse_exited" from="ChangeRace/unicorn/choose" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="ChangeRace/unicorn/choose" to="." method="_on_choose_pressed" binds= [ "unicorn" ]]
[connection signal="mouse_entered" from="ChangeRace/pegasus/choose" to="." method="_on_mouse_entered" binds= [ "Выбрать расу: Пегас" ]]
[connection signal="mouse_exited" from="ChangeRace/pegasus/choose" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="ChangeRace/pegasus/choose" to="." method="_on_choose_pressed" binds= [ "pegasus" ]]
